Подключил все начертания шрифта MuseoSansCyrl
Подключил все начертания шрифта MuseoSansCyrl

--- a/src/base/sass/_fonts.sass
+++ b/src/base/sass/_fonts.sass
@@ -2,8 +2,25 @@
    ========================================================================= */
 
 /**
- * Helvetica
+ * MuseoSansCyrillic
  */
 
-// Regular
-@include fontFace('Font name', 'filename', 'normal', 'normal')
+// 100
+@include fontFace('MuseoSansCyrl', 'MuseoSansCyrl-100', 100, 'normal')
+@include fontFace('MuseoSansCyrl', 'MuseoSansCyrl-100Italic', 100, italic)
+
+// 300
+@include fontFace('MuseoSansCyrl', 'MuseoSansCyrl-300', 300, 'normal')
+@include fontFace('MuseoSansCyrl', 'MuseoSansCyrl-300Italic', 300, italic)
+
+// 500
+@include fontFace('MuseoSansCyrl', 'MuseoSansCyrl-500', 500, 'normal')
+@include fontFace('MuseoSansCyrl', 'MuseoSansCyrl-500Italic', 500, italic)
+
+// 700 (Bold)
+@include fontFace('MuseoSansCyrl', 'MuseoSansCyrl-700', 700, 'normal')
+@include fontFace('MuseoSansCyrl', 'MuseoSansCyrl-700Italic', 700, italic)
+
+// 900 (Extra Bold)
+@include fontFace('MuseoSansCyrl', 'MuseoSansCyrl-900', 900, 'normal')
+@include fontFace('MuseoSansCyrl', 'MuseoSansCyrl-600Italic', 900, italic)
