--- a/src/base/sass/main.sass
+++ b/src/base/sass/main.sass
@@ -10,14 +10,14 @@
 @import '../../mixins/sass/responsive-title'
 @import '../../mixins/sass/letter-spacing'
 @import '../../vendor/bootstrap/bootstrap'
-//@import '../mixins/sass/font-face'
-//@import './fonts'
+@import '../../mixins/sass/font-face'
 
 /**
  * Base
  */
-@import './base'
-@import 'typography'
+@import './fonts'
+// @import './base'
+@import './typography'
 
 /**
  * Static blocks
