--- a/src/mixins/sass/font-face.sass
+++ b/src/mixins/sass/font-face.sass
@@ -2,6 +2,6 @@
     @font-face
         font-display: swap
         font-family: $fontName
-        src: local($fontName), url('../fonts/' + $fontFileName + '.woff2') format('woff2')
+        src: local($fontName), url('../fonts/' + $fontFileName + '.woff') format('woff')
         font-weight: $fontWeight
         font-style: $fontStyle
