--- a/src/base/sass/main.sass
+++ b/src/base/sass/main.sass
@@ -3,28 +3,26 @@
    ========================================================================= */
 
 @import 'variables'
-@import '../../mixins/sass/sprite-img'
+//@import '../mixins/sass/sprite-img'
 @import '../../mixins/sass/sprite-svg'
 @import '../../mixins/sass/pos-center'
 @import '../../mixins/sass/pos-strech'
 @import '../../mixins/sass/responsive-title'
 @import '../../mixins/sass/letter-spacing'
-@import '../../mixins/sass/gradient'
 @import '../../vendor/bootstrap/bootstrap'
 @import '../../mixins/sass/font-face'
 
 /**
  * Base
  */
-@import './base'
 @import './fonts'
-@import './png-icons'
+// @import './base'
 @import './typography'
 
 /**
  * Static blocks
  */
-@import '../../components/page/page'
+@import '../../components/wrapper/wrapper'
 @import "../../components/header/header"
 @import '../../components/textblock/textblock'
 @import "../../components/footer/footer"
@@ -32,15 +30,9 @@
 /**
  * Dev blocks
  */
-@import "../../components/brain/brain"
-@import "../../components/white-wrap/white-wrap"
 
 
 
-/**
- * Bootstrap
- */
-@import "../../components/bootstrap/btn"
 
 
 /**
