--- a/src/mixins/sass/_sprite-img.scss
+++ b/src/mixins/sass/_sprite-img.scss
@@ -9,33 +9,110 @@
 //
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
-$menu-item-bg-home-name: 'menu-item-bg-home';
-$menu-item-bg-home-x: 0px;
-$menu-item-bg-home-y: 0px;
-$menu-item-bg-home-offset-x: 0px;
-$menu-item-bg-home-offset-y: 0px;
-$menu-item-bg-home-width: 52px;
-$menu-item-bg-home-height: 51px;
-$menu-item-bg-home-total-width: 109px;
-$menu-item-bg-home-total-height: 51px;
-$menu-item-bg-home-image: '../images/sprite.png';
-$menu-item-bg-home: (0px, 0px, 0px, 0px, 52px, 51px, 109px, 51px, '../images/sprite.png', 'menu-item-bg-home', );
-$menu-item-bg-katalog-name: 'menu-item-bg-katalog';
-$menu-item-bg-katalog-x: 57px;
-$menu-item-bg-katalog-y: 0px;
-$menu-item-bg-katalog-offset-x: -57px;
-$menu-item-bg-katalog-offset-y: 0px;
-$menu-item-bg-katalog-width: 52px;
-$menu-item-bg-katalog-height: 51px;
-$menu-item-bg-katalog-total-width: 109px;
-$menu-item-bg-katalog-total-height: 51px;
-$menu-item-bg-katalog-image: '../images/sprite.png';
-$menu-item-bg-katalog: (57px, 0px, -57px, 0px, 52px, 51px, 109px, 51px, '../images/sprite.png', 'menu-item-bg-katalog', );
-$spritesheet-width: 109px;
-$spritesheet-height: 51px;
+$arrow-back-up-primary-name: 'arrow-back-up-primary';
+$arrow-back-up-primary-x: 0px;
+$arrow-back-up-primary-y: 101px;
+$arrow-back-up-primary-offset-x: 0px;
+$arrow-back-up-primary-offset-y: -101px;
+$arrow-back-up-primary-width: 37px;
+$arrow-back-up-primary-height: 58px;
+$arrow-back-up-primary-total-width: 212px;
+$arrow-back-up-primary-total-height: 159px;
+$arrow-back-up-primary-image: '../images/sprite.png';
+$arrow-back-up-primary: (0px, 101px, 0px, -101px, 37px, 58px, 212px, 159px, '../images/sprite.png', 'arrow-back-up-primary', );
+$arrow-foward-down-white-name: 'arrow-foward-down-white';
+$arrow-foward-down-white-x: 0px;
+$arrow-foward-down-white-y: 0px;
+$arrow-foward-down-white-offset-x: 0px;
+$arrow-foward-down-white-offset-y: 0px;
+$arrow-foward-down-white-width: 31px;
+$arrow-foward-down-white-height: 96px;
+$arrow-foward-down-white-total-width: 212px;
+$arrow-foward-down-white-total-height: 159px;
+$arrow-foward-down-white-image: '../images/sprite.png';
+$arrow-foward-down-white: (0px, 0px, 0px, 0px, 31px, 96px, 212px, 159px, '../images/sprite.png', 'arrow-foward-down-white', );
+$car-name: 'car';
+$car-x: 93px;
+$car-y: 101px;
+$car-offset-x: -93px;
+$car-offset-y: -101px;
+$car-width: 60px;
+$car-height: 30px;
+$car-total-width: 212px;
+$car-total-height: 159px;
+$car-image: '../images/sprite.png';
+$car: (93px, 101px, -93px, -101px, 60px, 30px, 212px, 159px, '../images/sprite.png', 'car', );
+$check-sm-name: 'check-sm';
+$check-sm-x: 168px;
+$check-sm-y: 48px;
+$check-sm-offset-x: -168px;
+$check-sm-offset-y: -48px;
+$check-sm-width: 10px;
+$check-sm-height: 8px;
+$check-sm-total-width: 212px;
+$check-sm-total-height: 159px;
+$check-sm-image: '../images/sprite.png';
+$check-sm: (168px, 48px, -168px, -48px, 10px, 8px, 212px, 159px, '../images/sprite.png', 'check-sm', );
+$family-name: 'family';
+$family-x: 42px;
+$family-y: 101px;
+$family-offset-x: -42px;
+$family-offset-y: -101px;
+$family-width: 46px;
+$family-height: 42px;
+$family-total-width: 212px;
+$family-total-height: 159px;
+$family-image: '../images/sprite.png';
+$family: (42px, 101px, -42px, -101px, 46px, 42px, 212px, 159px, '../images/sprite.png', 'family', );
+$header-subtitle-left-name: 'header-subtitle-left';
+$header-subtitle-left-x: 92px;
+$header-subtitle-left-y: 0px;
+$header-subtitle-left-offset-x: -92px;
+$header-subtitle-left-offset-y: 0px;
+$header-subtitle-left-width: 33px;
+$header-subtitle-left-height: 68px;
+$header-subtitle-left-total-width: 212px;
+$header-subtitle-left-total-height: 159px;
+$header-subtitle-left-image: '../images/sprite.png';
+$header-subtitle-left: (92px, 0px, -92px, 0px, 33px, 68px, 212px, 159px, '../images/sprite.png', 'header-subtitle-left', );
+$header-subtitle-right-name: 'header-subtitle-right';
+$header-subtitle-right-x: 130px;
+$header-subtitle-right-y: 0px;
+$header-subtitle-right-offset-x: -130px;
+$header-subtitle-right-offset-y: 0px;
+$header-subtitle-right-width: 33px;
+$header-subtitle-right-height: 68px;
+$header-subtitle-right-total-width: 212px;
+$header-subtitle-right-total-height: 159px;
+$header-subtitle-right-image: '../images/sprite.png';
+$header-subtitle-right: (130px, 0px, -130px, 0px, 33px, 68px, 212px, 159px, '../images/sprite.png', 'header-subtitle-right', );
+$house-name: 'house';
+$house-x: 36px;
+$house-y: 0px;
+$house-offset-x: -36px;
+$house-offset-y: 0px;
+$house-width: 51px;
+$house-height: 51px;
+$house-total-width: 212px;
+$house-total-height: 159px;
+$house-image: '../images/sprite.png';
+$house: (36px, 0px, -36px, 0px, 51px, 51px, 212px, 159px, '../images/sprite.png', 'house', );
+$man-woman-name: 'man-woman';
+$man-woman-x: 168px;
+$man-woman-y: 0px;
+$man-woman-offset-x: -168px;
+$man-woman-offset-y: 0px;
+$man-woman-width: 44px;
+$man-woman-height: 43px;
+$man-woman-total-width: 212px;
+$man-woman-total-height: 159px;
+$man-woman-image: '../images/sprite.png';
+$man-woman: (168px, 0px, -168px, 0px, 44px, 43px, 212px, 159px, '../images/sprite.png', 'man-woman', );
+$spritesheet-width: 212px;
+$spritesheet-height: 159px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($menu-item-bg-home, $menu-item-bg-katalog, );
-$spritesheet: (109px, 51px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($arrow-back-up-primary, $arrow-foward-down-white, $car, $check-sm, $family, $header-subtitle-left, $header-subtitle-right, $house, $man-woman, );
+$spritesheet: (212px, 159px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
