--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,4 +1,54 @@
 header.header
     .container
+        .row.align-items-center
+            .col-md-8
+                .header__site-descr Интерактивный тест, основанный на научных знаниях <br />о мозге, когнитивистике и нейрофизиологии
+                h1.header__title.my-30
+                    span.d-block.text-primary.font-weight-bold Что мешает тебе
+                    | добиваться
+                    br
+                    | больших успехов?
 
+                h2.h3.header__subtitle.text-center.mt-0
+                    | Пройди тест и выясни,
+                    br
+                    | что тормозит тебя больше всего
+                    span.header__subtitle-dashed-line
+
+                h3.h5.text-primary.lh-1-05
+                    | Тест не только выяснит причину неудач,
+                    br
+                    | но и подберет набор техник-приемов
+
+                .header__test-resourses
+                    .row.no-gutters.align-items-center
+                        .col-auto
+                            img(src="./images/test-resourses.png" alt="Используя их, ты сможешь двигаться к своей цели быстрее и эффективнее ")
+                        .col.pl-15
+                            ul.style-check
+                                each name in ['бесплатные', 'быстрые', 'эффективные', 'подходят именно тебе']
+                                    li= name
+
+                    .header__test-resourses-txt используя их, ты сможешь двигаться <br />к своей цели быстрее и эффективнее
+
+                .header__btn-block.mt-40
+                    button.btn.btn-lg.btn-primary.btn-block.btn-s67.px-30(type="button")
+                        span.text-uppercase.d-block Пройти самодиагностику
+                        span.d-block за 2 минуты
+
+                    p.mb-0.mt-15.text-center.fz-14.font-weight-light Бесплатно, данные защищены
+
+            .col-md-4
+                .brain
+                    .brain__callout Твой мозг может всё
+                    img(src="./images/brain.png" alt="Твой мозг может всё")
+
+                    .brain__icon.brain__icon--man-woman
+                        i.icon.man-woman
+                    .brain__icon.brain__icon--family
+                        i.icon.family
+                    .brain__icon.brain__icon--car
+                        i.icon.car
+                    .brain__icon.brain__icon--house
+                        i.icon.house
 
