--- a/src/components/footer/_footer.sass
+++ b/src/components/footer/_footer.sass
@@ -1,2 +1,9 @@
 .footer
     color: $white
+    margin-top: 50px
+
+    &__link
+        color: #bbbbbb
+
+        &:hover
+            text-decoration: none
