--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,3 +1,7 @@
-footer.footer.bg-dark.py-3.mt-4
-    .container
-        p Copyright и трали вали
+footer.footer
+    .row.justify-content-between
+        .col-md-5.text-center
+            a.footer__link(href="#") Политика конфиденциальности
+
+        .col-md-5.text-center
+            a.footer__link(href="#") Разработано в Quiz24.ru
