--- a/src/base/sass/main.sass
+++ b/src/base/sass/main.sass
@@ -23,7 +23,7 @@
 /**
  * Static blocks
  */
-@import '../../components/wrapper/wrapper'
+@import '../../components/page/page'
 @import "../../components/header/header"
 @import '../../components/textblock/textblock'
 @import "../../components/footer/footer"
@@ -32,6 +32,7 @@
  * Dev blocks
  */
 @import "../../components/brain/brain"
+@import "../../components/white-wrap/white-wrap"
 
 /**
  * Bootstrap
