Создал блок вопроса квиза

--- a/src/base/sass/_typography.sass
+++ b/src/base/sass/_typography.sass
@@ -73,8 +73,11 @@ ol
 .fz-18
     font-size: 18px
 
-.fw-700
-    font-weight: 700
+.fz-19
+    font-size: 19px
+
+.fw-500
+    font-weight: 500
 
 .lh-1-05
     line-height: 1.05
