--- a/src/base/sass/_variables.scss
+++ b/src/base/sass/_variables.scss
@@ -52,7 +52,7 @@ $white:    #fff;
 $gray-100: #f8f9fa;
 $gray-200: #e9ecef;
 $gray-300: #dee2e6;
-$gray-400: #ced4da;
+$gray-400: #c6cbce;
 $gray-500: #adb5bd;
 $gray-600: #6c757d;
 $gray-700: #495057;
@@ -83,10 +83,10 @@ $blue:    #007bff;
 $indigo:  #6610f2;
 $purple:  #6f42c1;
 $pink:    #e83e8c;
-$red:     #dc3545;
+$red:     #eb656c;
 $orange:  #fd7e14;
-$yellow:  #ffc107;
-$green:   #28a745;
+$yellow:  #ea983e;
+$green:   #6fd265;
 $teal:    #20c997;
 $cyan:    #17a2b8;
 $dark-tan: #b18248;
@@ -114,7 +114,7 @@ $colors: map-merge(
 );
 
 $primary:       $greeny-blue;
-$secondary:     $gray-600;
+$secondary:     $gray-400;
 $success:       $green;
 $info:          $cyan;
 $warning:       $yellow;
