--- a/src/base/sass/main.sass
+++ b/src/base/sass/main.sass
@@ -10,12 +10,14 @@
 @import '../../mixins/sass/responsive-title'
 @import '../../mixins/sass/letter-spacing'
 @import '../../mixins/sass/gradient'
+@import '../../mixins/sass/flare'
 @import '../../vendor/bootstrap/bootstrap'
 @import '../../mixins/sass/font-face'
 
 /**
  * Base
  */
+@import './base'
 @import './fonts'
 @import './png-icons'
 @import './typography'
@@ -33,6 +35,11 @@
  */
 @import "../../components/brain/brain"
 @import "../../components/white-wrap/white-wrap"
+@import "../../components/quiz/quiz"
+@import "../../components/progress/progress"
+@import "../../components/radio-btn/radio-btn"
+@import "../../components/card/card"
+
 
 /**
  * Bootstrap
