Создал блок вопроса квиза

--- a/src/base/sass/main.sass
+++ b/src/base/sass/main.sass
@@ -33,6 +33,8 @@
  */
 @import "../../components/brain/brain"
 @import "../../components/white-wrap/white-wrap"
+@import "../../components/quiz/quiz"
+@import "../../components/progress/progress"
 
 /**
  * Bootstrap
