--- a/src/index.pug
+++ b/src/index.pug
@@ -4,6 +4,27 @@ append variables
     - var title = 'Интерактивный тест, основанный на научных знаниях о мозге, когнитивистике и нейрофизиологии'
 
 block main
+    main#main
+        .quiz
+            .quiz__block
+                h2.quiz__block-tlt
+                    span.d-block Пройди тест, выясни, что тормозит тебя больше всего,
+                    span.fw-500.fz-19 и получи набор мини-техник, чтобы исправить ситуацию
+
+            .progress.mt-30
+                - let i = 1;
+                while i <= 6
+                    if i == 1
+                        .progress__step.is-active Вопрос 1 из 6
+                    else
+                        .progress__step
+                    - i++;
+
+            header.quiz__header.mt-50
+                .quiz__header-counter.mr-25 1
+                h3.h4.quiz__title Я всегда пишу список целей на год, месяц, неделю, день. Обо мне можно сказать, что я знаю, чего хочу в жизни и как этого достичь.
+
+
 
 
 
