Переделал радио-кнопки -- создал еиный компонент .radio

--- a/src/base/sass/main.sass
+++ b/src/base/sass/main.sass
@@ -37,7 +37,7 @@
 @import "../../components/white-wrap/white-wrap"
 @import "../../components/quiz/quiz"
 @import "../../components/progress/progress"
-@import "../../components/radio-btn/radio-btn"
+@import "../../components/radio/radio"
 @import "../../components/card/card"
 
 
