Добавление блика кнопке сделал отдельным классом

--- a/src/components/bootstrap/_btn.sass
+++ b/src/components/bootstrap/_btn.sass
@@ -9,3 +9,13 @@
 
     &-s67
         height: 67px
+
+    &-flare
+        position: relative
+        overflow: hidden
+
+        &::before
+            content: ""
+            @include flare
+
+
