--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -32,7 +32,7 @@ header.header
                     .header__test-resourses-txt используя их, ты сможешь двигаться <br />к своей цели быстрее и эффективнее
 
                 .header__btn-block.mt-40
-                    button.btn.btn-lg.btn-primary.btn-block.btn-s67.px-30(type="button")
+                    button.btn.btn-lg.btn-primary.btn-block.btn-flare.btn-s67.px-30(type="button")
                         span.text-uppercase.d-block Пройти самодиагностику
                         span.d-block за 2 минуты
 
