--- a/src/base/sass/main.sass
+++ b/src/base/sass/main.sass
@@ -39,6 +39,8 @@
 @import "../../components/progress/progress"
 @import "../../components/radio/radio"
 @import "../../components/card/card"
+@import "../../components/present/present"
+@import "../../components/form/form"
 
 
 /**
